--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# Object Detection Using Color 
+# Object Detection using Color
+
+This project detects the object using its color 
 
 # Procedure :
 
